[package]
name = "ddos"
version = "0.1.0"
authors = ["constantin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
futures = "0.3.4"
reqwest = "0.10.1"
tokio = { version = "0.2", features = ["macros"] }
